--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -3,8 +3,7 @@
 {% block head %}
 <title>Blue Census</title>
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/vue.min.js') }}"></script>
-<script type=text/javascript src="{{ url_for('static', filename='js/lib/jquery.min.js') }}"></script>
-<script type=text/javascript src="{{ url_for('static', filename='js/lib/bootstrap.min.js') }}"></script>
+<script type=text/javascript src="{{ url_for('static', filename='js/lib/vue-resource.min.js') }}"></script>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 {% endblock %}
@@ -19,10 +18,10 @@
     <h4>Search by:</h4>
     <form class="form-inline">
       <button type="button" class="btn btn-[[queryType == 'coord' ? 'info' : 'default']]" v-on:click="setType('coord')">Lagitude and Longitude</button>
-      <button type="button" class="btn btn-[[queryType == 'names' ? 'info' : 'default']]" v-on:click="setType('names')">State and County names</button>
+      <button type="button" class="btn btn-default btn-[[queryType == 'names' ? 'info' : 'default']]" v-on:click="setType('names')">State and County names</button>
     </form>
-    
 
+    <br/>
 
     <div class=typeCoord style="display:[[queryType == 'coord' ? 'block' : 'none']];">
       <h4>Latitude and Longitude</h4>
@@ -35,11 +34,11 @@
           <label for="longitudeInput">Longitude</label>
           <input type="text" class="form-control" id="longitudeInput" v-model=coordLon value="-74.3859788">
         </div>
-        <button type="submit" class="btn btn-primary">County Census</button>
+        <button id=buttonCoord v-on:click="search()" type=button class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> County Census</button>
       </form>
     </div>
 
-    <div class=typeNames style="display:[[queryType == 'names' ? 'block' : 'none']];">
+    <div class=typeNames style="display:none;display:[[queryType == 'names' ? 'block' : 'none']];">
       <h4>State and County names</h4>
       <form class="form-inline">
         <div class="form-group">
@@ -50,17 +49,42 @@
           <label for="countyInput">County</label>
           <input type="text" class="form-control" id="countyInput" v-model=nameCounty value="Union County">
         </div>
-        <button type="submit" class="btn btn-primary">County Census</button>
+        <button id=buttonNames v-on:click="search()" type=button class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> County Census</button>
       </form>
     </div>
     
     <br/>
     <br/>
+
     <p>API URL:</p>
-    <pre>/?[[queryType == 'coord' ? 'lat='+ coordLat +'&lon='+ coordLon : 'state=' + nameState + '&county=' + nameCounty]]</pre>
+    <pre>[[buildUrl()]]</pre>
+
+    <br/>
+    <br/>
+    
+    <div class="alert alert-info" role="alert" style="display:none;display:[[isLoading ? 'block' : 'none']];">
+      <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
+      Waiting for API response...
+    </div>
+
+    <div class="alert alert-danger" role="alert" style="display:none;display:[[hasError ? 'block' : 'none']];">
+      <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> 
+      <span class="sr-only">Error!</span>
+      Error: [[errorMessage]]
+    </div>
+
+    <div class="panel panel-default" style="display:none;display:[[!isLoading && !hasError && prettyData ? 'block' : 'none']];">
+      <div class="panel-heading">
+        <h3 class="panel-title">Data</h3>
+      </div>
+      <pre class="panel-body" style="border:0;background-color:transparent;">[[prettyData]]</pre>
+    </div>
+
 
   </div>
 </div>
 
+<script type=text/javascript src="{{ url_for('static', filename='js/lib/jquery.min.js') }}"></script>
+<script type=text/javascript src="{{ url_for('static', filename='js/lib/bootstrap.min.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/app/app.js') }}"></script>
 {% endblock %}
