Implemented simple chart Insights to UI.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -25,7 +25,8 @@ div.document {
     background: #FFF;
 }
 p.author {
-    text-align:right;
+    float: right;
+    margin: 10px 10px 0 0;
 }
 div p.bg-info {
     padding: 20px;
