--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,8 +10,8 @@
 
 {% block body %}
 <div class=document>
+  <p class=author>by Matt Hoffmann Silva. get the <a>source code</a>.</p>
   <h1><font color="#164362">Blue</font> Census</h1>
-  <p class=author>by <a>Matt Hoffmann Silva</a>. get the <a>source code</a>.</p>
   
   <div id="app">
 
@@ -28,11 +28,11 @@
       <form class="form-inline">
         <div class="form-group">
           <label for="latitudeInput">Latitude</label>
-          <input type="text" class="form-control" id="latitudeInput" v-model=coordLat value="40.7018252">
+          <input type="text" class="form-control" id="latitudeInput" v-model=coordLat value="30">
         </div>
         <div class="form-group">
           <label for="longitudeInput">Longitude</label>
-          <input type="text" class="form-control" id="longitudeInput" v-model=coordLon value="-74.3859788">
+          <input type="text" class="form-control" id="longitudeInput" v-model=coordLon value="-90">
         </div>
         <button id=buttonCoord v-on:click="search()" type=button class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> County Census</button>
       </form>
@@ -60,7 +60,6 @@
     <pre>[[buildUrl()]]</pre>
 
     <br/>
-    <br/>
     
     <div class="alert alert-info" role="alert" style="display:none;display:[[isLoading ? 'block' : 'none']];">
       <span class="glyphicon glyphicon-time" aria-hidden="true"></span>
@@ -69,10 +68,25 @@
 
     <div class="alert alert-danger" role="alert" style="display:none;display:[[hasError ? 'block' : 'none']];">
       <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span> 
-      <span class="sr-only">Error!</span>
-      Error: [[errorMessage]]
+      <span class="sr-only">Error!</span> Error: [[errorMessage]]
     </div>
 
+    <div class="panel panel-default" style="visibility:hidden; visibility:[[!isLoading && !hasError && prettyData ? 'visible' : 'hidden']];">
+<!--<div class="panel panel-default" >-->
+      <div class="panel-heading">
+        <h3 class="panel-title">Insights - [[stateName]] - [[countyName]]</h3>
+      </div>
+      <div class="panel-body">
+        <div id="divMaleVsFemale" style="display:inline;float:left;">
+          <canvas id="chartMaleVsFemale" width="275" height="285"></canvas>
+          <div id="divMaleVsFemaleLegend"></div>
+        </div>
+        <div id="divRaces" style="display:inline;float:right;">
+          <canvas id="chartRaces" width="335" height="285"></canvas>
+          <div id="divRacesLegend"></div>
+        </div>
+      </div>
+    </div>
     <div class="panel panel-default" style="display:none;display:[[!isLoading && !hasError && prettyData ? 'block' : 'none']];">
       <div class="panel-heading">
         <h3 class="panel-title">Data</h3>
@@ -86,5 +100,7 @@
 
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/jquery.min.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/bootstrap.min.js') }}"></script>
+<script type=text/javascript src="{{ url_for('static', filename='js/lib/Chart.min.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/app/app.js') }}"></script>
+<script type=text/javascript src="{{ url_for('static', filename='js/app/charts.js') }}"></script>
 {% endblock %}
