--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,7 +10,7 @@
 
 {% block body %}
 <div class=document>
-  <p class=author>by Matt Hoffmann Silva. get the <a>source code</a>.</p>
+  <p class=author>by Matheus Hoffmann Silva. get the <a href="https://github.com/hoffmannmatheus/blue-census">source code</a>.</p>
   <h1><font color="#164362">Blue</font> Census</h1>
   
   <div id="app">
