fixup! Fixed order of script loading @ home page.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -110,11 +110,13 @@
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/jquery.min.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/bootstrap.min.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/lib/Chart.min.js') }}"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU7_ArhnUuEeW0ieZedIk1PYQ_Mz59qaA&callback=initMap" async defer></script>
 
 <!-- Controllers -->
 <script type=text/javascript src="{{ url_for('static', filename='js/app/map.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/app/app.js') }}"></script>
 <script type=text/javascript src="{{ url_for('static', filename='js/app/charts.js') }}"></script>
+
+<!-- Maps -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDU7_ArhnUuEeW0ieZedIk1PYQ_Mz59qaA&callback=initMap" async defer></script>
 
 {% endblock %}
